# foampilot

./: .env.example  .gitignore  Dockerfile.agent  README.md  conftest.py  docker-compose.yml  pyproject.toml
benchmarks/: report.py  runner.py  scorer.py
scripts/: build_index.py  dev_setup.sh  install.sh  test_docker.py
src/foampilot/: __main__.py  config.py  logging_setup.py
src/foampilot/agents/: analyze_agent.py  base_agent.py  clarify_agent.py  consult_agent.py  mesh_agent.py  run_agent.py  setup_agent.py
src/foampilot/core/: agent_loop.py  compaction.py  orchestrator.py  paths.py  permissions.py  state.py  subagent.py  token_tracker.py
src/foampilot/docker/: client.py  manager.py  volume.py
src/foampilot/index/: builder.py  embeddings.py  parser.py  searcher.py
src/foampilot/index/data/: tutorial_embeddings_v11.npy  tutorial_index_v11.json
src/foampilot/prompts/: analyze.py  consult.py  mesh.py  orchestrator.py  run.py  setup.py  version_context.py
src/foampilot/tools/: base.py  registry.py
src/foampilot/tools/foam/: check_mesh.py  copy_tutorial.py  (+7 more)
src/foampilot/ui/: common.py  terminal.py
src/foampilot/version/: detector.py  registry.py
tests/: conftest.py
tests/fixtures/sample_dicts/: controlDict  fvSchemes  fvSolution
tests/integration/: test_docker_execution.py  test_tutorial_search_pipeline.py
tests/unit/: test_agent_loop.py  test_check_mesh.py  test_compaction.py  test_edit_foam_dict.py  test_foam_parser.py  test_index_builder.py  test_index_searcher.py  test_parse_log.py  test_token_tracker.py  test_version_registry.py
(+29 files in other folders)
